--- a/codenames/.gitignore
+++ b/codenames/.gitignore
@@ -4,6 +4,8 @@
 /node_modules
 /.pnp
 .pnp.js
+../codename_backend/codenamesdatabase/codenamesdatabase/local_settings.py
+../codename_backend/codenamesdatabase/codenamesdatabase/settings.py
 
 # testing
 /coverage
