--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "codenames",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": "16.9.1",
+    "npm": "8.3.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
