--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,8 +1,53 @@
-Django==3.1.8
+aiodns==3.0.0
+aiofile==3.7.2
+aiohttp==3.7.4.post0
+aioredis==1.3.1
+asgiref==3.4.1
+async-timeout==3.0.1
+attrs==21.2.0
+autobahn==21.3.1
+Automat==20.2.0
+caio==0.9.3
+certifi==2021.10.8
+cffi==1.15.0
+channels==3.0.4
+channels-redis==3.3.1
+chardet==3.0.4
+charset-normalizer==2.0.7
+constantly==15.1.0
+cryptography==35.0.0
+daphne==3.0.2
+dj-database-url==0.5.0
+Django==3.2.8
+django-cors-headers==3.10.0
 django-heroku==0.3.1
-psycopg2==2.9.2
-psycopg2-binary==2.9.2
-django-cors-headers==3.9.2
-djangorestframework==3.12.2
 gunicorn==20.1.0
+hiredis==2.0.0
+hyperlink==21.0.0
+idna==3.3
+incremental==21.3.0
+msgpack==1.0.2
+multidict==5.2.0
+mysqlclient==2.0.3
+psycopg2==2.9.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycares==4.1.2
+pycparser==2.20
+pycryptodomex==3.11.0
+PyJWT==2.3.0
+PyMySQL==1.0.2
+pyOpenSSL==21.0.0
+pytz==2021.3
+requests==2.26.0
+service-identity==21.1.0
+six @ file:///AppleInternal/BuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-103/six-1.15.0-py2.py3-none-any.whl
+sqlparse==0.4.2
+stream-chat==3.13.1
+Twisted==21.7.0
+txaio==21.2.1
+typing-extensions==3.10.0.2
+urllib3==1.26.7
 whitenoise==5.3.0
+yarl==1.7.0
+zope.interface==5.4.0
