--- a/requirements.txt
+++ b/requirements.txt
@@ -1,87 +1,90 @@
-altgraph==0.10.2
-appdirs==1.4.4
-asgi-redis==1.4.3
-asgiref==1.1.2
-asn1crypto==0.24.0
-bdist-mpkg==0.5.0
-bonjour-py==0.3
-certifi==2020.6.20
-cffi==1.14.3
-configparser==4.0.2
-contextlib2==0.6.0.post1
-cryptography==2.9.2
-csvImporter==0.1.3.2
-distlib==0.3.1
-Django==1.11.29
-django-adaptors==0.2.5
-django-webpack-loader==1.4.1
-enum34==1.1.6
+aioredis==1.3.1
+appdirs==1.4.3
+asgiref==3.4.1
+async-timeout==4.0.0
+attrs==19.3.0
+autobahn==21.3.1
+Automat==0.8.0
+blinker==1.4
+certifi==2019.11.28
+cffi==1.15.0
+channels==3.0.4
+channels-redis==3.3.1
+chardet==3.0.4
+Click==7.0
+cloud-init==21.2
+colorama==0.4.3
+command-not-found==0.3
+configobj==5.0.6
+constantly==15.1.0
+cryptography==35.0.0
+daphne==3.0.2
+dbus-python==1.2.16
+distlib==0.3.0
+distro==1.4.0
+distro-info===0.23ubuntu1
+Django==3.1.8
+django-cors-headers==3.8.0
+djangorestframework==3.12.4
+entrypoints==0.3
 filelock==3.0.12
-future==0.17.1
-importlib-metadata==1.7.0
-importlib-resources==3.0.0
-ipaddress==1.0.22
-macholib==1.5.1
-matplotlib==1.3.1
-modulegraph==0.10.4
-msgpack-python==0.5.6
-numpy==1.8.0rc1
-pathlib2==2.3.5
-pbr==5.6.0
-pep517==0.12.0
-pipenv==2020.6.2
-py2app==0.7.3
-pycparser==2.19
-PyMySQL==0.10.1
-pyobjc-core==2.5.1
-pyobjc-framework-Accounts==2.5.1
-pyobjc-framework-AddressBook==2.5.1
-pyobjc-framework-AppleScriptKit==2.5.1
-pyobjc-framework-AppleScriptObjC==2.5.1
-pyobjc-framework-Automator==2.5.1
-pyobjc-framework-CFNetwork==2.5.1
-pyobjc-framework-Cocoa==2.5.1
-pyobjc-framework-Collaboration==2.5.1
-pyobjc-framework-CoreData==2.5.1
-pyobjc-framework-CoreLocation==2.5.1
-pyobjc-framework-CoreText==2.5.1
-pyobjc-framework-DictionaryServices==2.5.1
-pyobjc-framework-EventKit==2.5.1
-pyobjc-framework-ExceptionHandling==2.5.1
-pyobjc-framework-FSEvents==2.5.1
-pyobjc-framework-InputMethodKit==2.5.1
-pyobjc-framework-InstallerPlugins==2.5.1
-pyobjc-framework-InstantMessage==2.5.1
-pyobjc-framework-LatentSemanticMapping==2.5.1
-pyobjc-framework-LaunchServices==2.5.1
-pyobjc-framework-Message==2.5.1
-pyobjc-framework-OpenDirectory==2.5.1
-pyobjc-framework-PreferencePanes==2.5.1
-pyobjc-framework-PubSub==2.5.1
-pyobjc-framework-QTKit==2.5.1
-pyobjc-framework-Quartz==2.5.1
-pyobjc-framework-ScreenSaver==2.5.1
-pyobjc-framework-ScriptingBridge==2.5.1
-pyobjc-framework-SearchKit==2.5.1
-pyobjc-framework-ServiceManagement==2.5.1
-pyobjc-framework-Social==2.5.1
-pyobjc-framework-SyncServices==2.5.1
-pyobjc-framework-SystemConfiguration==2.5.1
-pyobjc-framework-WebKit==2.5.1
+gunicorn==20.1.0
+hiredis==2.0.0
+httplib2==0.14.0
+hyperlink==21.0.0
+idna==2.8
+importlib-metadata==1.5.0
+incremental==16.10.1
+Jinja2==2.10.1
+jsonpatch==1.22
+jsonpointer==2.0
+jsonschema==3.2.0
+keyring==18.0.1
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+MarkupSafe==1.1.0
+more-itertools==4.2.0
+msgpack==1.0.2
+mysql-connector-python==8.0.23
+netifaces==0.10.4
+oauthlib==3.1.0
+pipenv==11.9.0
+protobuf==3.18.0
+pyasn1==0.4.2
+pyasn1-modules==0.2.1
+pycparser==2.21
+PyGObject==3.36.0
+PyHamcrest==1.9.0
+PyJWT==1.7.1
+pymacaroons==0.13.0
+PyNaCl==1.3.0
 pyOpenSSL==19.0.0
-pyparsing==2.0.1
-python-dateutil==1.5
-pytz==2013.7
-redis==2.10.6
-scandir==1.10.0
-scipy==0.13.0b1
-singledispatch==3.4.0.3
-six==1.12.0
-stevedore==1.32.0
-toml==0.10.2
-typing==3.7.4.1
-virtualenv==20.0.26
-virtualenv-clone==0.5.4
-virtualenvwrapper==4.8.4
-xattr==0.6.4
-zipp==1.2.0
+pyrsistent==0.15.5
+pyserial==3.4
+python-apt==2.0.0+ubuntu0.20.4.6
+python-debian===0.1.36ubuntu1
+pytz==2021.1
+PyYAML==5.3.1
+requests==2.22.0
+requests-unixsocket==0.2.0
+SecretStorage==2.3.1
+service-identity==18.1.0
+simplejson==3.16.0
+six==1.14.0
+sqlparse==0.4.2
+ssh-import-id==5.10
+systemd-python==234
+Twisted==18.9.0
+txaio==21.2.1
+typing-extensions==3.10.0.2
+ubuntu-advantage-tools==20.3
+ufw==0.36
+unattended-upgrades==0.1
+urllib3==1.25.8
+virtualenv==20.0.17
+virtualenv-clone==0.3.0
+wadllib==1.3.3
+zipp==1.0.0
+zope.interface==4.7.1 
