--- a/requirements.txt
+++ b/requirements.txt
@@ -86,5 +86,6 @@ urllib3==1.25.8
 virtualenv==20.0.17
 virtualenv-clone==0.3.0
 wadllib==1.3.3
+whitenoise==5.3.0
 zipp==1.0.0
-zope.interface==4.7.1 
+zope.interface==4.7.1
