--- a/requirements.txt
+++ b/requirements.txt
@@ -1,90 +1,56 @@
+aiodns==3.0.0
+aiofile==3.7.2
+aiohttp==3.7.4.post0
 aioredis==1.3.1
-appdirs==1.4.3
 asgiref==3.4.1
-async-timeout==4.0.0
-attrs==19.3.0
+async-timeout==3.0.1
+attrs==21.2.0
 autobahn==21.3.1
-Automat==0.8.0
-blinker==1.4
-certifi==2019.11.28
+Automat==20.2.0
+caio==0.9.3
+certifi==2021.10.8
 cffi==1.15.0
 channels==3.0.4
 channels-redis==3.3.1
 chardet==3.0.4
-Click==7.0
-cloud-init==21.2
-colorama==0.4.3
-command-not-found==0.3
-configobj==5.0.6
+charset-normalizer==2.0.7
 constantly==15.1.0
 cryptography==35.0.0
 daphne==3.0.2
-dbus-python==1.2.16
-distlib==0.3.0
-distro==1.4.0
-distro-info===0.23ubuntu1
-Django==3.1.8
-django-cors-headers==3.8.0
-djangorestframework==3.12.4
-entrypoints==0.3
-filelock==3.0.12
-gunicorn==20.1.0
+dj-database-url==0.5.0
+dj-static==0.0.6
+Django==3.2.8
+django-cors-headers==3.10.0
+django-heroku==0.3.1
+django-toolbelt==0.0.1
+gunicorn @ git+https://github.com/benoitc/gunicorn.git@ff58e0c6da83d5520916bc4cc109a529258d76e1
 hiredis==2.0.0
-httplib2==0.14.0
 hyperlink==21.0.0
-idna==2.8
-importlib-metadata==1.5.0
-incremental==16.10.1
-Jinja2==2.10.1
-jsonpatch==1.22
-jsonpointer==2.0
-jsonschema==3.2.0
-keyring==18.0.1
-language-selector==0.1
-launchpadlib==1.10.13
-lazr.restfulclient==0.14.2
-lazr.uri==1.0.3
-MarkupSafe==1.1.0
-more-itertools==4.2.0
+idna==3.3
+incremental==21.3.0
 msgpack==1.0.2
-mysql-connector-python==8.0.23
-netifaces==0.10.4
-oauthlib==3.1.0
-pipenv==11.9.0
-protobuf==3.18.0
-pyasn1==0.4.2
-pyasn1-modules==0.2.1
-pycparser==2.21
-PyGObject==3.36.0
-PyHamcrest==1.9.0
-PyJWT==1.7.1
-pymacaroons==0.13.0
-PyNaCl==1.3.0
-pyOpenSSL==19.0.0
-pyrsistent==0.15.5
-pyserial==3.4
-python-apt==2.0.0+ubuntu0.20.4.6
-python-debian===0.1.36ubuntu1
-pytz==2021.1
-PyYAML==5.3.1
-requests==2.22.0
-requests-unixsocket==0.2.0
-SecretStorage==2.3.1
-service-identity==18.1.0
-simplejson==3.16.0
-six==1.14.0
+multidict==5.2.0
+mysqlclient==2.0.3
+psycopg2==2.9.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycares==4.1.2
+pycparser==2.20
+pycryptodomex==3.11.0
+PyJWT==2.3.0
+PyMySQL==1.0.2
+pyOpenSSL==21.0.0
+pytz==2021.3
+requests==2.26.0
+service-identity==21.1.0
+six @ file:///AppleInternal/BuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-103/six-1.15.0-py2.py3-none-any.whl
 sqlparse==0.4.2
-ssh-import-id==5.10
-systemd-python==234
-Twisted==18.9.0
+static3==0.7.0
+stream-chat==3.13.1
+Twisted==21.7.0
 txaio==21.2.1
 typing-extensions==3.10.0.2
-ubuntu-advantage-tools==20.3
-ufw==0.36
-unattended-upgrades==0.1
-urllib3==1.25.8
-virtualenv==20.0.17
-virtualenv-clone==0.3.0
-wadllib==1.3.3
-zipp==1.0.0
-zope.interface==4.7.1 
+urllib3==1.26.7
+whitenoise==5.3.0
+yarl==1.7.0
+zope.interface==5.4.0
