--- a/requirements.txt
+++ b/requirements.txt
@@ -43,7 +43,7 @@ pyOpenSSL==21.0.0
 pytz==2021.3
 requests==2.26.0
 service-identity==21.1.0
-six @ file:///AppleInternal/BuildRoot/Library/Caches/com.apple.xbs/Sources/python3/python3-103/six-1.15.0-py2.py3-none-any.whl
+six==1.14.0
 sqlparse==0.4.2
 static3==0.7.0
 stream-chat==3.13.1
